[gd_scene load_steps=6 format=3 uid="uid://dvnykx0ktn32j"]

[ext_resource type="Script" path="res://World/Player/Player/UserInterface/Slots/MagicSlots.gd" id="1_dynut"]
[ext_resource type="Texture2D" uid="uid://dxkhxnsjsuqs7" path="res://Assets/Images/Spell icons/earth/1.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dnjl844vjd438" path="res://Assets/Images/Spell icons/earth/4.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bnhlsh6k33cej" path="res://Assets/Images/Spell icons/earth/2.png" id="5"]
[ext_resource type="Texture2D" uid="uid://baog8t2rv4xtq" path="res://Assets/Images/Spell icons/earth/3.png" id="6"]

[node name="MagicSlots" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_dynut")

[node name="SelectedBg" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 54.0
offset_bottom = 54.0

[node name="Bg" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 3.0
offset_right = 79.0
offset_bottom = 19.0001
scale = Vector2(3, 3)

[node name="btn1" type="TextureButton" parent="Bg"]
layout_mode = 2
texture_normal = ExtResource("3")

[node name="btn2" type="TextureButton" parent="Bg"]
layout_mode = 2
texture_normal = ExtResource("5")

[node name="btn3" type="TextureButton" parent="Bg"]
layout_mode = 2
texture_normal = ExtResource("6")

[node name="btn4" type="TextureButton" parent="Bg"]
layout_mode = 2
texture_normal = ExtResource("4")

[node name="Cooldown1" type="ColorRect" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 0
offset_left = 51.0
offset_top = 51.0
offset_right = 99.0
offset_bottom = 51.0
grow_vertical = 0
rotation = 180.0
mouse_filter = 2
color = Color(0.447059, 0.447059, 0.447059, 0.823529)

[node name="Cooldown2" type="ColorRect" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 0
offset_left = 111.0
offset_top = 51.0
offset_right = 159.0
offset_bottom = 51.0
grow_vertical = 0
rotation = 180.0
mouse_filter = 2
color = Color(0.447059, 0.447059, 0.447059, 0.823529)

[node name="Cooldown3" type="ColorRect" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 0
offset_left = 171.0
offset_top = 51.0
offset_right = 219.0
offset_bottom = 51.0
grow_vertical = 0
rotation = 180.0
mouse_filter = 2
color = Color(0.447059, 0.447059, 0.447059, 0.823529)

[node name="Cooldown4" type="ColorRect" parent="."]
custom_minimum_size = Vector2(16, 0)
layout_mode = 0
offset_left = 231.0
offset_top = 51.0
offset_right = 279.0
offset_bottom = 51.0
grow_vertical = 0
rotation = 180.0
mouse_filter = 2
color = Color(0.447059, 0.447059, 0.447059, 0.823529)

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="Bg/btn1" to="." method="_on_btn1_pressed"]
[connection signal="pressed" from="Bg/btn2" to="." method="_on_btn2_pressed"]
[connection signal="pressed" from="Bg/btn3" to="." method="_on_btn3_pressed"]
[connection signal="pressed" from="Bg/btn4" to="." method="_on_btn4_pressed"]
